tests/error/enum_errors/enum_keywords.py
from guppylang.decorator import guppy


@guppy.enum
class MyEnum(metaclass=type):
    var = {"x": int}


MyEnum.compile()
