tests/error/enum_errors/enum_keywords.err
Error: Unexpected keyword (at $FILE:5:13)
  | 
3 | 
4 | @guppy.enum
5 | class MyEnum(metaclass=type):
  |              ^^^^^^^^^^^^^^ Unexpected keyword

Guppy compilation failed due to 1 previous error
